# treeDAG

./: .travis.yml  CMakeLists.txt  COPYRIGHT  LICENSE  README.md
example/: CMakeLists.txt  decomposer.cpp  separatorCache.cpp
test/: CMakeLists.txt  separatorTest.cpp  util.cpp  util.hpp
treeDAG/: CMakeLists.txt  decomposer.cpp  decomposer.hpp  decomposer.hxx  decompositionDAG.cpp  decompositionDAG.hpp  decompositionDAG.hxx  separation.cpp  separation.hpp  separation.hxx  separator.cpp  separator.hpp  separator.hxx  separatorCache.cpp  separatorCache.hpp  separatorCache.hxx  separatorConfig.hpp  treeDecompositionDAG.cpp  treeDecompositionDAG.hpp  treeDecompositionDAG.hxx  treeDecompositionDAGAndNode.cpp  treeDecompositionDAGAndNode.hpp  treeDecompositionSubgraph.cpp  treeDecompositionSubgraph.hpp
treeDAG/util/: combination.hpp  combination.hxx  combinationIterator.cpp  combinationIterator.hpp  combinationIterator.hxx  kOrderedPermutateIterator.hpp  maskedRangeIterator.hpp  maskedRangeIterator.hxx  maskedRangeProxy.hpp  maskedRangeProxy.hxx  nChooseKIterator.cpp  nChooseKIterator.hpp  nChooseKIterator.hxx  tvsArray.hpp  tvsArray.hxx
